<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hADIt</string>
    <string name="app_description">Helpful Advanced Driving Instructor Tool.</string>
    <string name="action_settings">Settings</string>

    <string-array name="competency">
        <item>Cockpit Drill</item>
        <item>Moving Away</item>
        <item>Stopping</item>
        <item>Turning Left</item>
        <item>Turning Right</item>
        <item>T Junctions</item>
        <item>Crossroads</item>
        <item>Roundabouts</item>
        <item>Pedestrian Crossings</item>
        <item>Dual Carriageways</item>
        <item>One Way Streets</item>
        <item>Meeting Situations</item>
        <item>Defensive Driving</item>
        <item>Using Mirrors</item>
        <item>Emergency Stop</item>
        <item>Eco Driving</item>
        <item>Turn In The Road</item>
        <item>Parallel Park</item>
        <item>Left Reverse</item>
        <item>Bay Parking</item>
        <item>Show And tell</item>
        <item>Mock Tests</item>
    </string-array>

    <string-array name="testPassed">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
    </string-array>

    <string name="radiobtn1">Facebook Friend</string>
    <string name="radiobtn2">Theory Passed</string>
    <string name="radiobtn3">Test Booked</string>

    <string name="mainmenuButton1">Add Contact</string>
    <string name="mainmenuButton2">Edit Contact</string>
    <string name="mainmenuButton3">Contact Skills</string>
    <string name="mainmenuButton4">Calendar Event</string>
    <string name="mainmenuButton5">Competencies</string>
    <string name="mainmenuButton6">Settings</string>


    <string name="contactskillsButton1">Save</string>


    <string name="backButton">Back</string>

    <string name="btnClear">Clear</string>

    <string name="btnSave">Save</string>

    <string name="btnDelete">Delete</string>

    <string name="btnCancel">Cancel</string>

    <string name="btnDialogCancel">Got It!!!</string>
    <string name="btnDialogImage">Show Image!!!</string>

    <string name="cockpitDrill">There will be a description here about this subject.</string>
    <string name="movingAway">You should be able to demonstrate good control when Moving away from the side of the road, from behind a parked car and on a gradient. Mirrors and blind spots checks should be carried out prior to moving.</string>
    <string name="stopping">You must identify a Safe, Legal and Convenient place to stop the car on the left. Use appropriate mirrors and signal correctly your intentions to others and then slow the vehicle under control and finish parallel with the curb about a door mirror width away.</string>
    <string name="turningLeft">Identify the road on the left, check mirrors correctly and signal to inform others of your intentions. Slow vehicle on approach to junction paying attention to other vehicles and pedestrians and cyclists. Select appropriate gear and check new road before turning.</string>
    <string name="turningRight">Identify the road on the right, check mirrors correctly and signal to inform others of your intentions. Slow vehicle on approach to junction while moving towards just left of the centre of road, paying attention to others and Priorities. Select appropriate gear and check new road before turning.</string>
    <string name="tJunction">There will be a description here about this subject.</string>
    <string name="crossRoads">There will be a description here about this subject.</string>
    <string name="roundAbouts">There will be a description here about this subject.</string>
    <string name="pedestrianCrossing">There will be a description here about this subject.</string>
    <string name="emergencyStop">There will be a description here about this subject.</string>
    <string name="usingMirrors">There will be a description here about this subject.</string>
    <string name="dualCarriageways">There will be a description here about this subject.</string>
    <string name="oneWayStreets">There will be a description here about this subject.</string>
    <string name="meetingSituations">There will be a description here about this subject.</string>
    <string name="defensiveDriving">There will be a description here about this subject.</string>
    <string name="ecoDriving">There will be a description here about this subject.</string>
    <string name="turnInTheRoads">There will be a description here about this subject.</string>
    <string name="parallelParking">There will be a description here about this subject.</string>
    <string name="leftReverse">There will be a description here about this subject.</string>
    <string name="bayParking">There will be a description here about this subject.</string>
    <string name="independentDriving">There will be a description here about this subject.</string>
    <string name="mockTests">There will be a description here about this subject.</string>

    <!-- Drawables for skills -all names here -->
</resources>