<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/backButton" />
        </LinearLayout>


        <EditText
            android:id="@+id/txtHouseStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="House And Street" />

        <EditText
            android:id="@+id/txtTown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Town" />

        <EditText
            android:id="@+id/txtPostcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:hint="Postcode" />

        <EditText
            android:id="@+id/txtContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:hint="Contact number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radiobtnfacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:layout_weight="1"
                android:text="@string/radiobtn1" />

            <RadioButton
                android:id="@+id/radiobtnTheoryPassed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:checked="false"
                android:layout_weight="1"
                android:text="@string/radiobtn2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobtnTestBooked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/radiobtn3" />
            <Button
            android:id="@+id/resetRadioBtns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="Reset Radio Buttons"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="12 Dec 2014"></TextView>

            <Button
                android:id="@+id/setDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Set Date"></Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnClear" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save Pupil" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/footerLayoutBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="This is the footer section"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>