<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/backButton" />
        </LinearLayout>

        <EditText
            android:id="@+id/txtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:hint="Full Name" />

        <EditText
            android:id="@+id/txtHouseStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:hint="House And Street" />

        <EditText
            android:id="@+id/txtTown"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:hint="Town" />

        <EditText
            android:id="@+id/txtPostcode"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Postcode"
            android:numeric="integer" />

        <EditText
            android:id="@+id/txtContactNumber"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contact number"
            android:numeric="integer" />

        <GridLayout
            android:id="@+id/gridLayoutRadioBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingLeft="10dp"
            android:rowCount="1"
            android:textAlignment="center">

            
            <RadioButton
                android:id="@+id/radiobtnfacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtn1"
                android:checked="false" />

            <RadioButton
                android:id="@+id/radiobtnTheoryPassed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/radiobtn2"
                android:checked="false"
                />
        </GridLayout>

        <GridLayout
            android:id="@+id/gridLayoutRadioBtns2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:columnCount="11"
            android:paddingLeft="10dp"
            android:rowCount="2"
            android:textAlignment="center">

            <RadioButton
                android:id="@+id/radiobtnTestBooked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtn3"
                android:checked="false"
                android:layout_row="0"
                android:layout_column="0" />


        </GridLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="12 Dec 2014"
                android:padding="10dp"></TextView>

            <Button
                android:id="@+id/setDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Set Date">
            </Button>

        </LinearLayout>
        <GridLayout
            android:id="@+id/gridLayoutTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:paddingLeft="10dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/testPassedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Test Passed (times)"
                android:padding="10dp"/>

            <Spinner
                android:id="@+id/testPassed"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Test Passed"
                android:layout_row="0" />

            <TextView
                android:id="@+id/lessonHadLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Lesson(s)"
                android:padding="10dp"/>

            <Spinner
                android:id="@+id/lessonsHad"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Lesson Had" />
        </GridLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnClear" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save Pupil" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/footerLayoutBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="*All fields are mandatory."
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>